Sun Feb  2 11:22:57 1997  Richard Basch  <basch@lehman.com>

	* cns.c (k5_name_from_ccache):
		Declare variable as (char FAR *) to match
		krb5_unparse_name prototype

	* Makefile.in: Build using CCOPTS2, not COPTS (win16)

Fri Dec 20 10:28:59 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb5.def: New file, modelled after krbnet.def

	* cns.h, cns.c, krbini.h, cnsres5.c, Makefile: remove
		Cygnus/KerbNet(tm) name from MIT distribution

Fri Aug  9 03:41:52 1996  Michael Graff  <explorer@cygnus.com>

	* Makefile.in: rename executable to kerbnet.exe

	* cns.def: rename to kerbnet.def

Wed Aug  7 14:25:34 1996  Michael Graff  <explorer@lenin.cygnus.com>

	* Makefile.in: Build kerbnet, not cns.exe
	
	* cns.c:
	* cns.h:
	* cnsres5.rc:
	* krbini.h:  Help file is kerbnet.hlp, program name is kerb*net.

	* cns.def: rename to kerbnet.def.

Sat Aug 3 13:58:20 1996  Jeff Bigler  <jcb@cygnus.com>

	* cns-help.hpj, cns-help.doc, cns-help.hlp:  added help files.
	The cns-help.hpj is a RoboHelp help project.  RoboHelp requires
	cns-help.doc, which is a Microsoft Word document, and it creates
	cns-help.hlp, which is the actual help file.

	* Makefile.in:  added line to install section to install help
	file.

Thu Jul 25 13:52:04 1996    <explorer@lenin.cygnus.com>

	* options.c (opts_command): Display a warning message when changing
	the location of the krb.conf file, since the KRB5 libraries
	will have opened it and tucked it away in krb5_context->profile,
	which we as a client don't have access to.

Wed Aug  7 18:03:16 1996  Jeff Bigler  <jcb@viola.cygnus.com>

	* kerbnet.hpj:  new help project (RoboHelp)
	* kerbnet.doc:  help file (Microsoft Word document)
	* kerbnet.hlp:  new help file (Windows help file)

Wed Jul 24 06:12:24 1996  Michael Graff  <explorer@lenin.cygnus.com>

	* Makefile.in: Build cnsres[45].rc into executable, depending on
	if we're compiling for V4 or V5.

	* cns.rc: remove, no longer needed. cnsres[45].rc replace this,